--- a/commerce/auctions/templates/auctions/Art&collection.html
+++ b/commerce/auctions/templates/auctions/Art&collection.html
@@ -353,43 +353,45 @@
 
                 <div class="theme-explore-more">
                     <h3 class="explore-title">Explorer plus the selection<h3>
-                    <div class="explore-carousel">
-                        <div class="explore-carousel-by2item" id="carousel-slide">
-                            <div class="explore-carousel-item">
-                                <div class="explore-item-img">
-                                    <img src="http://localhost:8000/static/auctions/media/art-icons/thématique more1.svg" alt="" />
-                                </div>  
-                                <a href="#">Sélections artistes contemporains</a>      
-                                <span href="#">Des oeuvres et le meilleur des talents!</span>      
-                            </div>    
-                            <div class="explore-carousel-item">
-                                <div class="explore-item-img">
-                                    <img src="http://localhost:8000/static/auctions/media/art-icons/thématique more2.svg" alt="" />
-                                </div>  
-                                <a href="#">Street art et Pop culture</a>      
-                                <span href="#">L'art urbain s'invite chez vous</span>      
-                            </div> 
-                        </div>  
-                        <div class="explore-carousel-by2item" id="carousel-slide">
-                            <div class="explore-carousel-item">
-                                <div class="explore-item-img">
-                                    <img src="http://localhost:8000/static/auctions/media/art-icons/thématique more3.svg" alt="" />
-                                </div>  
-                                <a href="#">Mobilier design italien</a>      
-                                <span href="#">Vivez la Dolce Vita avec des pièces cultes!</span>      
-                            </div>
-                            <div class="explore-carousel-item">
-                                <div class="explore-item-img">
-                                    <img src="http://localhost:8000/static/auctions/media/art-icons/thématique more4.svg" alt="" />
-                                </div>  
-                                <a href="#">Mobilier design et vintage</a>      
-                                <span href="#">Des icônes du design chez vous</span>      
-                            </div>
-                        </div>  
-                        <button class="explore-carousel-prev">
+                    <div class="explore-carousel-container">
+                        <div class="explore-carousel1">
+                            <div class="explore-carousel-by2item" id="carousel-slide">
+                                <div class="explore-carousel-item">
+                                    <div class="explore-item-img">
+                                        <img src="http://localhost:8000/static/auctions/media/art-icons/thématique more1.svg" alt="" />
+                                    </div>  
+                                    <a href="#">Sélections artistes contemporains</a>      
+                                    <span href="#">Des oeuvres et le meilleur des talents!</span>      
+                                </div>    
+                                <div class="explore-carousel-item">
+                                    <div class="explore-item-img">
+                                        <img src="http://localhost:8000/static/auctions/media/art-icons/thématique more2.svg" alt="" />
+                                    </div>  
+                                    <a href="#">Street art et Pop culture</a>      
+                                    <span href="#">L'art urbain s'invite chez vous</span>      
+                                </div> 
+                            </div>  
+                            <div class="explore-carousel-by2item" id="carousel-slide">
+                                <div class="explore-carousel-item">
+                                    <div class="explore-item-img">
+                                        <img src="http://localhost:8000/static/auctions/media/art-icons/thématique more3.svg" alt="" />
+                                    </div>  
+                                    <a href="#">Mobilier design italien</a>      
+                                    <span href="#">Vivez la Dolce Vita avec des pièces cultes!</span>      
+                                </div>
+                                <div class="explore-carousel-item">
+                                    <div class="explore-item-img">
+                                        <img src="http://localhost:8000/static/auctions/media/art-icons/thématique more4.svg" alt="" />
+                                    </div>  
+                                    <a href="#">Mobilier design et vintage</a>      
+                                    <span href="#">Des icônes du design chez vous</span>      
+                                </div>
+                            </div>  
+                        </div>
+                        <button class="explore-carousel-prev1">
                             <img src="http://localhost:8000/static/auctions/media/art-icons/arrow_preview.svg" alt="" />                 
                         </button>
-                        <button class="explore-carousel-next">
+                        <button class="explore-carousel-next1">
                             <img src="http://localhost:8000/static/auctions/media/art-icons/arrow_next.svg" alt="" />                   
                         </button>
                         </button>
