--- a/commerce/auctions/templates/auctions/electronics.html
+++ b/commerce/auctions/templates/auctions/electronics.html
@@ -18,22 +18,19 @@
 			<h5 >Découvrez</h5>
 			<ul class="category-navs-ul">
 				<li class="flex space-between">
-					<a href="#"><span>Arts, antiquités</span></a><img src="static/auctions/media/expand_more.svg" alt="" />
+					<a href="#"><span>Informatique, réseau</span></a><img src="http://localhost:8000/static/auctions/media/expand_more.svg" alt="" />
 				</li>
 				<li class="flex space-between">
-					<a href="#"><span>Céramiques, verres</span></a><img src="static/auctions/media/expand_more.svg" alt="" />
+					<a href="#"><span>Téléphonie, mobilité</span></a><img src="http://localhost:8000/static/auctions/media/expand_more.svg" alt="" />
 				</li>
 				<li class="flex space-between">
-					<a href="#"><span>Collections</span></a><img src="static/auctions/media/expand_more.svg" alt="" />
+					<a href="#"><span>Matériel audio et video</span></a><img src="http://localhost:8000/static/auctions/media/expand_more.svg" alt="" />
 				</li>
 				<li class="flex space-between">
-					<a href="#"><span>Jouet et Jeux</span></a><img src="static/auctions/media/expand_more.svg" alt="" />
+					<a href="#"><span>Jeux video, consoles</span></a><img src="http://localhost:8000/static/auctions/media/expand_more.svg" alt="" />
 				</li>
 				<li class="flex space-between">
-					<a href="#"><span>Monnaies</span></a><img src="static/auctions/media/expand_more.svg" alt="" />
-				</li>
-				<li class="flex space-between">
-					<a href="#"><span>Timbres</span></a><img src="static/auctions/media/expand_more.svg" alt="" />
+					<a href="#"><span>Photo, caméscopes</span></a><img src="http://localhost:8000/static/auctions/media/expand_more.svg" alt="" />
 				</li>
 			</ul>
 			<hr />
@@ -42,30 +39,54 @@
 			<h5 class="category-navs-h5">Explorer par Catégories</h5>
 			<ul class="category-navs-ul">
 				<li class="flex space-between">
-					<a href="#"><span>Arts et antiquités</span></a>
+					<a href="#"><span>Téléphonie et mobilité</span></a>
 				</li>
 				
 				<li class="flex space-between">
-					<a href="#"><span>Articles de collection</span></a>
+					<a href="#"><span>Matériel audio et video</span></a>
 				</li>
 				<li class="flex space-between">
-					<a href="#"><span>Jouet et jeux</span></a>
+					<a href="#"><span>Informatique et réseau</span></a>
 				</li>
 				<li class="flex space-between">
-					<a href="#"><span>Monnaies</span></a>
+					<a href="#"><span>Jeux vidéo et consoles</span></a>
 				</li>
 				<li class="flex space-between">
-					<a href="#"><span>Timbres</span></a>
+					<a href="#"><span>Photot et caméscopes</span></a>
 				</li>
-                <li class="flex space-between">
-					<a href="#"><span>Céramiques et verres</span></a>
+			</ul>
+			<hr />
+
+            <h5 class="category-navs-h5">Autres</h5>
+			<ul class="category-navs-ul">
+				<li class="flex space-between">
+					<a href="#"><span>Reconditionné</span></a>
 				</li>
-                <li class="flex space-between">
-					<a href="#"><span>Livres anciens et de
-                        collection</span></a>
+				
+				<li class="flex space-between">
+					<a href="#"><span>Drônes</span></a>
 				</li>
-                <li class="flex space-between">
-					<a href="#"><span>Véhicules miniatures</span></a>
+			</ul>
+			<hr />
+
+            <h5 class="category-navs-h5">Promotions</h5>
+			<ul class="category-navs-ul">
+				<li class="flex space-between">
+					<a href="#"><span>Bons Plans Tech</span></a>
+				</li>
+			</ul>
+			<hr />
+
+            <h5 class="category-navs-h5">Occasions</h5>
+			<ul class="category-navs-ul">
+				<li class="flex space-between">
+					<a href="#"><span>Recyclage smartphone</span></a>
+				</li>
+				<li class="flex space-between">
+					<a href="#"><span>Recyclage appareils photo et caméscopes</span></a>
+				</li>
+				<li class="flex space-between">
+					<a href="#"><span>Vendez sur ebay</span></a>
 				</li>
 			</ul>
 			<hr />
@@ -76,14 +97,94 @@
 		<div class="category-content grow">
 
 			<div class="category-explore">
-                <h3 class="explore-title">Art et antiquités<h3>
+                <h3 class="explore-title">Explorer par catégorie<h3>
                 <ul class="explore-items">
                     <a href="#">
                         <li class="explore-item">
                             <div class="explore-item-img">
                                 <img src="" alt="" />
                             </div>
-                            <span></span>
+                            <span>Téléphones mobile</span>
+                        </li>
+                    </a>
+                    <a href="#">
+                        <li class="explore-item">
+                            <div class="explore-item-img">
+                                <img src="" alt="" />
+                            </div>
+                            <span>Informatique et réseaux</span>
+                        </li>
+                    </a>
+                    <a href="#">
+                        <li class="explore-item">
+                            <div class="explore-item-img">
+                                <img src="" alt="" />
+                            </div>
+                            <span>Jeux vidéos et console</span>
+                        </li>
+                    </a>
+                    <a href="#">
+                        <li class="explore-item">
+                            <div class="explore-item-img">
+                                <img src="" alt="" />
+                            </div>
+                            <span>Appareils photo et caméscope</span>
+                        </li>
+                    </a>
+                    <a href="#">
+                        <li class="explore-item">
+                            <div class="explore-item-img">
+                                <img src="" alt="" />
+                            </div>
+                            <span>Casques et écouteurs</span>
+                        </li>
+                    </a>
+                    <a href="#">
+                        <li class="explore-item">
+                            <div class="explore-item-img">
+                                <img src="" alt="" />
+                            </div>
+                            <span>Casques et écouteurs</span>
+                        </li>
+                    </a>
+                    <a href="#">
+                        <li class="explore-item">
+                            <div class="explore-item-img">
+                                <img src="" alt="" />
+                            </div>
+                            <span>Enceintes et équipements audio</span>
+                        </li>
+                    </a>
+                    <a href="#">
+                        <li class="explore-item">
+                            <div class="explore-item-img">
+                                <img src="" alt="" />
+                            </div>
+                            <span>Accessoires pour téléphones portable</span>
+                        </li>
+                    </a>
+                    <a href="#">
+                        <li class="explore-item">
+                            <div class="explore-item-img">
+                                <img src="" alt="" />
+                            </div>
+                            <span>Tablettes</span>
+                        </li>
+                    </a>
+                    <a href="#">
+                        <li class="explore-item">
+                            <div class="explore-item-img">
+                                <img src="" alt="" />
+                            </div>
+                            <span>Imprimante</span>
+                        </li>
+                    </a>
+                    <a href="#">
+                        <li class="explore-item">
+                            <div class="explore-item-img">
+                                <img src="" alt="" />
+                            </div>
+                            <span>Télévisions</span>
                         </li>
                     </a>
                 </ul>
@@ -120,7 +221,7 @@
             <hr />
 
             <div class="category-explore">
-                <h3 class="explore-title">Explorer par ventes thématiques<h3>
+                <h3 class="explore-title">Explorer par marques<h3>
                 <div class="explore-carousel" >
                     <a class="explore-sildes" href="#">
                         <div class="slides-content">
