--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -53,10 +53,11 @@
 				<div class="discovery-slogan">
 					<span>Des oeuvres et le meilleur des talents</span>
 				</div>
-				<div class="discover-btn flex">
+				<div class="discover-btn flex" id="discover-btn">
 					<span>Découvrez</span>
 					<img
 						class="discover-img"
+						id="discover-img"
 						src="static/auctions/media/arrow_forward.svg"
 						alt=""
 					/>
